--- a/team.html
+++ b/team.html
@@ -209,8 +209,8 @@
                                 <div class="overlay-box">
                                     <div class="inner">
                                         <ul class="social-icon-one">
-                                            <li><a class="fa fa-linkedin" href="#" target="_blank"></a></li>
-                                            <li><a class="fa fa-github" href="#" target="_blank"></a></li>
+                                            <li><a class="fa fa-linkedin" href="#" ></a></li>
+                                            <li><a class="fa fa-github" href="#" ></a></li>
                                             <li><a class="fa fa-instagram" href="https://www.instagram.com/ishika_025/"
                                                     target="_blank"></a>
                                             </li>
