--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <section class="web-section">
             <div class="auto-container">
                 <div class="title-box">
-                    <h2>Serious business requires <br>a seriously good website</h2>
+                    <h2 style="justify-content: justify;">Serious business requires <br>a seriously good website</h2>
                     <div class="text">Your website is the base camp for all of your digital marketing. It needs to be
                         awesome.
                     </div>
