--- a/index.html
+++ b/index.html
@@ -72,12 +72,16 @@
             <div class="playground">
                 <div class="bottomPosition">
                     <h2 class="special" style="color: #fff;font-family:'Poppins';"><i> Our Solutions are Focused <br>
-                        on
-                        your Problems.</i>
+                            on
+                            your Problems.</i>
                     </h2>
                 </div>
             </div>
-            <div style="margin-left: 0;margin-top: 50vh;display: flex;"><p style="margin-left: 0;transform: rotate(-90deg);margin-top: 0;" >press and hold</p></div>
+            <div style="margin-left: 0;margin-top: 50vh;display: flex;">
+                <div style="display: flex;" >
+                    <p class="linede" style="transform: rotate(-90deg);margin-top: 0;display:inline;user-select: none;">press and hold</p>
+                </div>
+            </div>
         </section>
 
         <section class="choose-section" style="background-color: #fff;">
