--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </h2>
                 </div>
             </div>
-            <div style="margin-left: 0;margin-top: 50vh;display: flex;">
+            <div style="margin-left: 0;margin-top: 8vh;display: flex;margin-left: 300px;">
                 <div style="display: flex;" >
                     <p class="linede" style="transform: rotate(-90deg);margin-top: 0;display:inline;user-select: none;">press and hold</p>
                 </div>
