--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="description" content="LancingDev IT Company - Our Solutions are Focused on your Problems." />
     <meta name="keywords"
-        content="LancingDev,Freelancer,freelancing,freelancing developer,web development,app development,business,digital marketing,graphic design">
+        content="LancingDev,Freelancer,freelancing,freelancing developer,freelancing websites,freelancing sites,web development company,web development,app development,business,digital marketing,graphic design">
     <meta name="author" content="LancingDev" />
 
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -78,8 +78,9 @@
                 </div>
             </div>
             <div style="margin-left: 0;margin-top: 7vh;display: flex;margin-left: 220px;">
-                <div style="display: flex;" >
-                    <p class="linede" style="transform: rotate(-90deg);margin-top: 0;display:inline;user-select: none;">press and hold</p>
+                <div style="display: flex;">
+                    <p class="linede" style="transform: rotate(-90deg);margin-top: 0;display:inline;user-select: none;">
+                        press and hold</p>
                 </div>
             </div>
         </section>
