--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </h2>
                 </div>
             </div>
-            <div style="margin-left: 0;margin-top: 7vh;display: flex;margin-left: 220px;">
+            <div class="remove" style="margin-left: 0;margin-top: 7vh;display: flex;margin-left: 220px;">
                 <div style="display: flex;">
                     <p class="linede" style="transform: rotate(-90deg);margin-top: 0;display:inline;user-select: none;">
                         press and hold</p>
