--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords"
         content="LancingDev,Freelancer,freelancing,freelancing developer,freelancing websites,freelancing sites,web development company,web development,app development,business,digital marketing,graphic design">
     <meta name="author" content="LancingDev" />
-    <meta property="og:image" content="images/logo-final-black.png" />
-    <meta name="twitter:image" content="images/logo-final-black.png">
+    <meta property="og:image" content="images/meta.png" />
+    <meta name="twitter:image" content="images/meta.png">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
