removed_single_page_notfound

--- a/portfolio.html
+++ b/portfolio.html
@@ -142,7 +142,7 @@
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="portfolio-single.html">Ganesh</a></h6>
+												<h6><a href="#">Ganesh</a></h6>
 												<div class="category">Graphic Design</div>
 											</div>
 										</div>
@@ -160,7 +160,7 @@
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="portfolio-single.html">Swasarjan</a></h6>
+												<h6><a href="#">Swasarjan</a></h6>
 												<div class="category">Web Development</div>
 											</div>
 										</div>
@@ -177,7 +177,7 @@
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="portfolio-single.html">Reon</a></h6>
+												<h6><a href="#">Reon</a></h6>
 												<div class="category">Web Development</div>
 											</div>
 										</div>
@@ -194,7 +194,7 @@
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="portfolio-single.html">Devarshi</a></h6>
+												<h6><a href="https://devarshidoshi.github.io/" target="_blank">Devarshi</a></h6>
 												<div class="category">Web Development</div>
 											</div>
 										</div>
@@ -211,7 +211,7 @@
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="portfolio-single.html">Mehul</a></h6>
+												<h6><a href="https://mehulminat.github.io/" target="_blank">Mehul</a></h6>
 												<div class="category">Web Development</div>
 											</div>
 										</div>
@@ -228,7 +228,7 @@
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="portfolio-single.html">Kunal</a></h6>
+												<h6><a href="https://parekhkunal.github.io/" target="_blank">Kunal</a></h6>
 												<div class="category">Web Development</div>
 											</div>
 										</div>
@@ -245,7 +245,7 @@
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="portfolio-single.html">Sahara Foundation</a></h6>
+												<h6><a href="#">Sahara Foundation</a></h6>
 												<div class="category">Graphic Design</div>
 											</div>
 										</div>
@@ -262,7 +262,7 @@
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="portfolio-single.html">Sahara Foundation</a></h6>
+												<h6><a href="#">Sahara Foundation</a></h6>
 												<div class="category">Graphic Design</div>
 											</div>
 										</div>
@@ -279,7 +279,7 @@
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="portfolio-single.html">Quote</a></h6>
+												<h6><a href="#">Quote</a></h6>
 												<div class="category">Graphic Design</div>
 											</div>
 										</div>
