--- a/team.html
+++ b/team.html
@@ -305,7 +305,7 @@
                             </div>
                             <div class="lower-content">
                                 <h5>Vibhu</h5>
-                                <div class="designation">CONTENT WRITER</div>
+                                <div class="designation">DIGITAL MARKETER</div>
                             </div>
                         </div>
                     </div>
