--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
 	<!-- <link rel="stylesheet/less" type="text/css" href="css/styles.scss" /> -->
+	<meta name="description" content="LancingDev IT Company - Our Solutions are Focused on your Problems." />
+	<meta name="keywords" content="LancingDev,lancingdev,LANCINGDEV,Freelancer,freelancing,freelancing developer,freelancing websites,freelancing sites,web development company,web development,app development,business,digital marketing,graphic design, webdevelopment,appdevelopment,it company,it company in vadodara,app dvelopment company in vadodara,web development company in vadodara,graphic designer in vadodara,digital marketing company in vadodara,digital marketing company in gujarat,digital marketing company in india,It consultancy,it consultancy in vadodara,it consultancy in gujarat,it consultancy in India
+	        ">
 	<link href="css/responsive.css" rel="stylesheet">
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 	<link rel="icon" href="images/logo-final-black.png" type="image/x-icon">
@@ -267,8 +270,8 @@
 					gravity: 1,
 					drift: 0,
 					ticks: 200,
-					colors: ["#7b5cff","#b3c7ff","#5c86ff", "#ff799f"],
-					shapes: ["square", "circle","triangle"],
+					colors: ["#7b5cff", "#b3c7ff", "#5c86ff", "#ff799f"],
+					shapes: ["square", "circle", "triangle"],
 					scalar: 1,
 					zIndex: 2000,
 					disableForReducedMotion: true
