--- a/team.html
+++ b/team.html
@@ -92,9 +92,9 @@
         </div>
 
         <section class="team-page-section">
-            <div class="auto-container">
+            <div class="auto-container" style="max-width: 1800px !important;">
                 <div class="row clearfix" style="align-items: center;justify-content: center;">
-                    <div class="team-member col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-member col-lg-2 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image-box">
                                 <figure class="image">
@@ -116,13 +116,13 @@
                                 </div>
                             </div>
                             <div class="lower-content">
-                                <h5>Kunal</h5>
+                                <h5>Kunal Parekh</h5>
                                 <div class="designation">FOUNDER & CEO</div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="team-member col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-member col-lg-2 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image-box">
                                 <figure class="image">
@@ -144,12 +144,12 @@
                                 </div>
                             </div>
                             <div class="lower-content">
-                                <h5>Mehul</h5>
+                                <h5>Mehul Minat</h5>
                                 <div class="designation">FOUNDER & CTO</div>
                             </div>
                         </div>
                     </div>
-                    <div class="team-member col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-member col-lg-2 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image-box">
                                 <figure class="image">
@@ -171,14 +171,14 @@
                                 </div>
                             </div>
                             <div class="lower-content">
-                                <h5>Devarshi</h5>
+                                <h5>Devarshi Doshi</h5>
                                 <div class="designation">FOUNDER & COO</div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row clearfix" style="align-items: center;justify-content: center;">
-                    <div class="team-member col-lg-3 col-md-6 col-sm-12">
+                <div class="row clearfix" style="align-items: center;justify-content: center;margin-left: 0px;">
+                    <div class="team-member col-lg-2 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image-box">
                                 <figure class="image">
@@ -203,7 +203,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="team-member col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-member col-lg-2 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image-box">
                                 <figure class="image">
@@ -227,12 +227,7 @@
                             </div>
                         </div>
                     </div>
-
-
-                </div>
-                <div class="row clearfix" style="align-items: center;justify-content: center;">
-
-                    <div class="team-member col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-member col-lg-2 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image-box">
                                 <figure class="image">
@@ -259,7 +254,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="team-member col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-member col-lg-2 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image-box">
                                 <figure class="image">
@@ -285,7 +280,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="team-member col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-member col-lg-2 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image-box">
                                 <figure class="image">
@@ -314,7 +309,6 @@
                     </div>
 
                 </div>
-
             </div>
     </div>
     </section>
