--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,7 @@
 						<div class="gallery-block mix all website col-lg-3 col-md-4 col-sm-12">
 							<div class="inner-box">
 								<figure class="image-box">
-									<img src="images/clients/kunal.png" alt="">
+									<img src="images/clients/kunal_port.png" alt="">
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
@@ -239,7 +239,7 @@
 											</div>
 										</div>
 									</div>
-									<a href="images/clients/kunal.png" data-fancybox="gallery-1" data-caption=""
+									<a href="images/clients/kunal_port.png" data-fancybox="gallery-1" data-caption=""
 										class="link"><span class="icon flaticon-full-screen"></span></a>
 								</figure>
 							</div>
