--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="auto-container">
                     <div class="clearfix">
                         <div class="pull-left logo-box">
-                            <div class="logo"><a href="index.html"><img src="images/logo-final-white.png" alt=""
+                            <div class="logo"><a href="index.html"><img src="images/logo-final-white.png" alt="LancingDev"
                                         title=""></a></div>
                         </div>
                         <div class="nav-outer clearfix">
@@ -153,7 +153,7 @@
                                 <div class="inner-box">
                                     <div class="content">
                                         <div class="icon-box">
-                                            <span class="icon"><img src="images/icons/web-1.png" alt="" /></span>
+                                            <span class="icon"><img src="images/icons/web-1.png" alt="LancingDevicon" /></span>
                                         </div>
                                         <h5><a href="#">Uniquely crafted websites</a></h5>
                                         <div class="text">Our designs are created from scratch. We create wireframe
@@ -166,7 +166,7 @@
                                 <div class="inner-box">
                                     <div class="content">
                                         <div class="icon-box">
-                                            <span class="icon"><img src="images/icons/web-2.png" alt="" /></span>
+                                            <span class="icon"><img src="images/icons/web-2.png" alt="LancingDev-icon" /></span>
                                         </div>
                                         <h5><a href="#">Goal focused</a></h5>
                                         <div class="text">You might want to be generating new sales leads, converting
@@ -179,7 +179,7 @@
                                 <div class="inner-box">
                                     <div class="content">
                                         <div class="icon-box">
-                                            <span class="icon"><img src="images/icons/web-3.png" alt="" /></span>
+                                            <span class="icon"><img src="images/icons/web-3.png" alt="LancingDev-icon" /></span>
                                         </div>
                                         <h5><a href="#">Search engine optimised</a></h5>
                                         <div class="text">We use best practice techniques to ensure your content is
