--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="LancingDev IT Company - Our Solutions are Focused on your Problems." />
     <meta name="keywords" content="LancingDev,lancingdev,LANCINGDEV,Freelancer,freelancing,freelancing developer,freelancing websites,freelancing sites,web development company,web development,app development,business,digital marketing,graphic design, webdevelopment,appdevelopment,it company,it company in vadodara,app dvelopment company in vadodara,web development company in vadodara,graphic designer in vadodara,digital marketing company in vadodara,digital marketing company in gujarat,digital marketing company in india,It consultancy,it consultancy in vadodara,it consultancy in gujarat,it consultancy in India
         ">
+    <meta name="robots" content="index, follow">
+    <meta name="robots" content="follow">
     <meta name="author" content="LancingDev" />
     <meta property="og:image" content="images/meta.png" />
     <meta name="twitter:image" content="images/meta.png">
@@ -33,8 +35,8 @@
                 <div class="auto-container">
                     <div class="clearfix">
                         <div class="pull-left logo-box">
-                            <div class="logo"><a href="index.html"><img src="images/logo-final-white.png" alt="LancingDev"
-                                        title=""></a></div>
+                            <div class="logo"><a href="index.html"><img src="images/logo-final-white.png"
+                                        alt="LancingDev" title=""></a></div>
                         </div>
                         <div class="nav-outer clearfix">
                             <nav class="main-menu navbar-expand-md">
@@ -153,7 +155,8 @@
                                 <div class="inner-box">
                                     <div class="content">
                                         <div class="icon-box">
-                                            <span class="icon"><img src="images/icons/web-1.png" alt="LancingDevicon" /></span>
+                                            <span class="icon"><img src="images/icons/web-1.png"
+                                                    alt="LancingDevicon" /></span>
                                         </div>
                                         <h5><a href="#">Uniquely crafted websites</a></h5>
                                         <div class="text">Our designs are created from scratch. We create wireframe
@@ -166,7 +169,8 @@
                                 <div class="inner-box">
                                     <div class="content">
                                         <div class="icon-box">
-                                            <span class="icon"><img src="images/icons/web-2.png" alt="LancingDev-icon" /></span>
+                                            <span class="icon"><img src="images/icons/web-2.png"
+                                                    alt="LancingDev-icon" /></span>
                                         </div>
                                         <h5><a href="#">Goal focused</a></h5>
                                         <div class="text">You might want to be generating new sales leads, converting
@@ -179,7 +183,8 @@
                                 <div class="inner-box">
                                     <div class="content">
                                         <div class="icon-box">
-                                            <span class="icon"><img src="images/icons/web-3.png" alt="LancingDev-icon" /></span>
+                                            <span class="icon"><img src="images/icons/web-3.png"
+                                                    alt="LancingDev-icon" /></span>
                                         </div>
                                         <h5><a href="#">Search engine optimised</a></h5>
                                         <div class="text">We use best practice techniques to ensure your content is
@@ -380,7 +385,8 @@
                                                 target="_blank"></a>
                                             <a href="https://twitter.com/LancingDev" class="fab fa-twitter"
                                                 target="_blank"></a>
-                                            <a href="#" class="fab fa-discord" target="_blank"></a>
+                                            <a href="https://discord.gg/McRdR9NM" class="fab fa-discord"
+                                                target="_blank"></a>
                                             <a href="mailto:lancingdev@gmail.com" class="fa fa-envelope"
                                                 target="_blank"></a>
                                         </div>
