--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="LancingDev IT Company - Our Solutions are Focused on your Problems." />
 	<meta name="keywords" content="LancingDev,lancingdev,LANCINGDEV,Freelancer,freelancing,freelancing developer,freelancing websites,freelancing sites,web development company,web development,app development,business,digital marketing,graphic design, webdevelopment,appdevelopment,it company,it company in vadodara,app dvelopment company in vadodara,web development company in vadodara,graphic designer in vadodara,digital marketing company in vadodara,digital marketing company in gujarat,digital marketing company in india,It consultancy,it consultancy in vadodara,it consultancy in gujarat,it consultancy in India
 	        ">
-	
+
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/responsive.css" rel="stylesheet">
@@ -160,6 +160,15 @@
 							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/mehul1.png"
 										style="padding:50px;margin-top: -50px;" alt=""></a></figure>
 						</li>
+						<li class="slide-item">
+							<figure class="image-box"><a href="#" target="_blank"><img
+										src="images/clients/sukhsangam.png" style="padding:50px;margin-top: -50px;"
+										alt=""></a></figure>
+						</li>
+						<li class="slide-item">
+							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/ganga_bg.png"
+										style="padding:50px;margin-top: -50px;" alt=""></a></figure>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -238,18 +247,16 @@
 						<div class="testimonial-block">
 							<div class="inner-box">
 								<div class="content">
-									<div class="text">Really impressed by the quality of solutions provided by
-										LancingDev. They were right on schedule and were professional.
-										Helped us greatly on our project at a very reasonable cost. I highly recommend
-										their service.</div>
+									<div class="text">We got our website developed from them their service are up to the
+										mark. <br> Highly recommend them. <br></div>
 								</div>
 								<div class="info-box">
 									<div class="author-image">
-										<img src="images/resource/author-4.png" alt="" />
+										<img src="images/clients/ganga_bg.png" alt="" />
 
 									</div>
-									<h5>Anonymous</h5>
-									<div class="designation">Student</div>
+									<h5>GangaMinerals</h5>
+									<div class="designation">Owner</div>
 								</div>
 							</div>
 						</div>
@@ -311,7 +318,7 @@
 										<div class="social-box">
 											<a href="https://www.instagram.com/lancingdev.ld/" class="fab fa-instagram"
 												target="_blank"></a>
-											<a href="https://twitter.com/LancingDev" class="fab fa-twitter"
+											<a href="https://www.facebook.com/lancingdev.fb/" class="fab fa-facebook"
 												target="_blank"></a>
 											<a href="https://discord.gg/McRdR9NM" class="fab fa-discord"
 												target="_blank"></a>
