--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                                         <div class="social-box">
                                             <a href="https://www.instagram.com/lancingdev.ld/" class="fab fa-instagram"
                                                 target="_blank"></a>
-                                            <a href="https://twitter.com/LancingDev" class="fab fa-twitter"
+                                            <a href="https://www.facebook.com/lancingdev.fb/" class="fab fa-facebook"
                                                 target="_blank"></a>
                                             <a href="https://discord.gg/McRdR9NM" class="fab fa-discord"
                                                 target="_blank"></a>
