--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>LancingDev | Portfolio</title>
+	<meta name="robots" content="index, follow">
+	<meta name="robots" content="follow">
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<meta name="description" content="LancingDev IT Company - Our Solutions are Focused on your Problems." />
 	<meta name="keywords" content="LancingDev,lancingdev,LANCINGDEV,Freelancer,freelancing,freelancing developer,freelancing websites,freelancing sites,web development company,web development,app development,business,digital marketing,graphic design, webdevelopment,appdevelopment,it company,it company in vadodara,app dvelopment company in vadodara,web development company in vadodara,graphic designer in vadodara,digital marketing company in vadodara,digital marketing company in gujarat,digital marketing company in india,It consultancy,it consultancy in vadodara,it consultancy in gujarat,it consultancy in India
 	        ">
 	<link href="css/main.css" rel="stylesheet">
-	<meta name="robots" content="index, follow">
-	<meta name="robots" content="follow">
+	
 	<link href="css/responsive.css" rel="stylesheet">
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 	<link rel="icon" href="images/logo-final-black.png" type="image/x-icon">
@@ -118,6 +119,14 @@
 							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/mehul1.png"
 										style="padding:50px;margin-top: -50px;" alt=""></a></figure>
 						</li>
+						<li class="slide-item">
+							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/sukhsangam.png"
+										style="padding:50px;margin-top: -50px;" alt=""></a></figure>
+						</li>
+						<li class="slide-item">
+							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/ganga_bg.png"
+										style="padding:50px;margin-top: -50px;" alt=""></a></figure>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -189,6 +198,23 @@
 									</div>
 									<a href="images/clients/reon.png" data-fancybox="gallery-1" data-caption=""
 										class="link"><span class="icon flaticon-full-screen"></span></a>
+								</figure>
+							</div>
+						</div>
+						<div class="gallery-block mix all website col-lg-3 col-md-4 col-sm-12">
+							<div class="inner-box">
+								<figure class="image-box">
+									<img src="images/clients/ganga_bg.png"  alt="">
+									<div class="overlay-box">
+										<div class="overlay-inner">
+											<div class="content">
+												<h6><a href="https://gangaminerals.in" target="_blank">Ganga Minerals</a></h6>
+												<div class="category">Web Development</div>
+											</div>
+										</div>
+									</div>
+									<a href="https://gangaminerals.in" data-fancybox="gallery-1" data-caption="" class="link" target="_blank"><span
+											class="icon flaticon-full-screen"></span></a>
 								</figure>
 							</div>
 						</div>
@@ -336,7 +362,7 @@
 										<div class="social-box">
 											<a href="https://www.instagram.com/lancingdev.ld/" class="fab fa-instagram"
 												target="_blank"></a>
-											<a href="https://twitter.com/LancingDev" class="fab fa-twitter"
+											<a href="https://www.facebook.com/lancingdev.fb/" class="fab fa-facebook"
 												target="_blank"></a>
 											<a href="https://discord.gg/McRdR9NM" class="fab fa-discord"
 												target="_blank"></a>
