--- a/service.html
+++ b/service.html
@@ -4,11 +4,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>LancingDev | Service</title>
+	<meta name="robots" content="index, follow">
+	<meta name="robots" content="follow">
 	<meta name="description" content="LancingDev IT Company - Our Solutions are Focused on your Problems." />
 	<meta name="keywords" content="LancingDev,lancingdev,LANCINGDEV,Freelancer,freelancing,freelancing developer,freelancing websites,freelancing sites,web development company,web development,app development,business,digital marketing,graphic design, webdevelopment,appdevelopment,it company,it company in vadodara,app dvelopment company in vadodara,web development company in vadodara,graphic designer in vadodara,digital marketing company in vadodara,digital marketing company in gujarat,digital marketing company in india,It consultancy,it consultancy in vadodara,it consultancy in gujarat,it consultancy in India
 	        ">
-	<meta name="robots" content="index, follow">
-	<meta name="robots" content="follow">
+	
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/responsive.css" rel="stylesheet">
@@ -240,7 +241,7 @@
 										<div class="social-box">
 											<a href="https://www.instagram.com/lancingdev.ld/" class="fab fa-instagram"
 												target="_blank"></a>
-											<a href="https://twitter.com/LancingDev" class="fab fa-twitter"
+											<a href="https://www.facebook.com/lancingdev.fb/" class="fab fa-facebook"
 												target="_blank"></a>
 											<a href="https://discord.gg/McRdR9NM" class="fab fa-discord"
 												target="_blank"></a>
