--- a/portfolio.html
+++ b/portfolio.html
@@ -213,7 +213,7 @@
 											</div>
 										</div>
 									</div>
-									<a href="https://gangaminerals.in" data-fancybox="gallery-1" data-caption="" class="link" target="_blank"><span
+									<a href="images/clients/gangamineral_comp.png" data-fancybox="gallery-1" data-caption="" class="link" target="_blank"><span
 											class="icon flaticon-full-screen"></span></a>
 								</figure>
 							</div>
