--- a/devarshi.html
+++ b/devarshi.html
@@ -39,7 +39,7 @@
                 <div class="colors">
                     <span class="color__title" style="margin-bottom: 20px;">Social Media</span>
                     <div class="color__container">
-                        <a href="https://www.instagram.com/devarshi_doshi/" target="_blank"><img src="./vcard/instagram.svg"
+                        <a href="https://www.instagram.com/devarshi_doshi/" target="_blank"><img src="./vcard/Instagram.svg"
                                 style="width: 70px;" alt=""></a>
                         <a href="https://www.linkedin.com/in/devarshi-doshi-45571a13b/" class="fa-brands fa-linkedin"
                             style="color: #007bb6; color: rgb(0, 123, 182);" target="_blank"></a>
