--- a/kunal.html
+++ b/kunal.html
@@ -6,7 +6,7 @@
     <title>Kunal Parekh</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./vcard/style.css">
-    <link rel="icon" href="./vcard/k.png">
+    <link rel="icon" href="./vcard/K.png">
     <script src="https://kit.fontawesome.com/deb24230a4.js" crossorigin="anonymous"></script>
 </head>
 
@@ -36,14 +36,14 @@ background: linear-gradient(to right, #f83600, #fe8c00);
                 <div class="colors">
                     <span class="color__title" style="margin-bottom: 20px;">Portfolio</span>
                     <div class="color__container">
-                        <a href="https://parekhkunal.github.io/" target="_blank"><img src="./vcard/k.png" style="width: 70px;"
+                        <a href="https://parekhkunal.github.io/" target="_blank"><img src="./vcard/K.png" style="width: 70px;"
                                 alt=""></a>
                     </div>
                 </div>
                 <div class="colors">
                     <span class="color__title" style="margin-bottom: 20px;">Social Media</span>
                     <div class="color__container">
-                        <a href="https://www.instagram.com/_kunalparekh_/" target="_blank"><img src="./vcard/instagram.svg"
+                        <a href="https://www.instagram.com/_kunalparekh_/" target="_blank"><img src="./vcard/Instagram.svg"
                                 style="width: 70px;" alt=""></a>
                         <a href="https://www.linkedin.com/in/kunal-parekh-4029311a5/" class="fa-brands fa-linkedin"
                             style="color: #007bb6; color: rgb(0, 123, 182);" target="_blank"></a>
