--- a/mehul.html
+++ b/mehul.html
@@ -43,7 +43,7 @@ background: linear-gradient(to right, #a8e063, #56ab2f) !important;
                 <div class="colors">
                     <span class="color__title" style="margin-bottom: 20px;">Social Media</span>
                     <div class="color__container">
-                        <a href="https://www.instagram.com/mehul.1337/" target="_blank"><img src="./vcard/instagram.svg"
+                        <a href="https://www.instagram.com/mehul.1337/" target="_blank"><img src="./vcard/Instagram.svg"
                                 style="width: 70px;" alt=""></a>
                         <a href="https://www.linkedin.com/in/mehul-minat/" class="fa-brands fa-linkedin"
                             style="color: #007bb6; color: rgb(0, 123, 182);" target="_blank"></a>
