--- a/portfolio.html
+++ b/portfolio.html
@@ -156,7 +156,7 @@
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="#">Ganesh</a></h6>
+												<h6><a href="#">Octant Pizza</a></h6>
 												<div class="category">Graphic Design</div>
 											</div>
 										</div>
